fix page_end_container text-align & line-height

--- a/workspace/zagook/src/main/resources/static/css/feed/container.css
+++ b/workspace/zagook/src/main/resources/static/css/feed/container.css
@@ -62,6 +62,8 @@
 	height: 100px;
 	/* temporary vertical align, only valid for the one line, not multiple*/
 	color: white;
+	line-height: 100px;
+	text-align: center;
 	background-color: var(--base_color_navy);
 	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.4);
 	border-radius: 20px;
